// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should allow to custom pull distance 1`] = `
<div class="van-pull-refresh">
  <div
    class="van-pull-refresh__track"
    style="transition-duration: 0ms; transform: translate3d(0,100px, 0);"
  >
    <div class="van-pull-refresh__head">
      <div class="van-pull-refresh__text">
        Pull to refresh...
      </div>
    </div>
  </div>
</div>
`;

exports[`should render different head content in different pulling status 1`] = `
<div class="van-pull-refresh">
  <div
    class="van-pull-refresh__track"
    style="transition-duration: 0ms; transform: translate3d(0,20px, 0);"
  >
    <div class="van-pull-refresh__head">
      <div class="van-pull-refresh__text">
        Pull to refresh...
      </div>
    </div>
  </div>
</div>
`;

exports[`should render different head content in different pulling status 2`] = `
<div class="van-pull-refresh">
  <div
    class="van-pull-refresh__track"
    style="transition-duration: 0ms; transform: translate3d(0,75px, 0);"
  >
    <div class="van-pull-refresh__head">
      <div class="van-pull-refresh__text">
        Loose to refresh...
      </div>
    </div>
  </div>
</div>
`;

exports[`should render different head content in different pulling status 3`] = `
<div class="van-pull-refresh">
  <div
    class="van-pull-refresh__track"
    style="transition-duration: 300ms; transform: translate3d(0,50px, 0);"
  >
    <div class="van-pull-refresh__head">
      <div
        class="van-loading van-loading--circular van-pull-refresh__loading"
        aria-live="polite"
        aria-busy="true"
      >
        <span class="van-loading__spinner van-loading__spinner--circular">
          <svg
            class="van-loading__circular"
            viewbox="25 25 50 50"
          >
            <circle
              cx="50"
              cy="50"
              r="20"
              fill="none"
            >
            </circle>
          </svg>
        </span>
        <span class="van-loading__text">
          Loading...
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render different head content in different pulling status 4`] = `
<div class="van-pull-refresh">
  <div
    class="van-pull-refresh__track"
    style="transition-duration: 300ms; transform: translate3d(0,50px, 0);"
  >
    <div class="van-pull-refresh__head">
      <div
        class="van-loading van-loading--circular van-pull-refresh__loading"
        aria-live="polite"
        aria-busy="true"
      >
        <span class="van-loading__spinner van-loading__spinner--circular">
          <svg
            class="van-loading__circular"
            viewbox="25 25 50 50"
          >
            <circle
              cx="50"
              cy="50"
              r="20"
              fill="none"
            >
            </circle>
          </svg>
        </span>
        <span class="van-loading__text">
          Loading...
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render different head content in different pulling status 5`] = `
<div class="van-pull-refresh">
  <div
    class="van-pull-refresh__track"
    style="transition-duration: 300ms;"
  >
    <div class="van-pull-refresh__head">
    </div>
  </div>
</div>
`;

exports[`should render status slots correctly 1`] = `
<div class="van-pull-refresh">
  <div
    class="van-pull-refresh__track"
    style="transition-duration: 0ms; transform: translate3d(0,20px, 0);"
  >
    <div class="van-pull-refresh__head">
      pulling 20
    </div>
  </div>
</div>
`;

exports[`should render status slots correctly 2`] = `
<div class="van-pull-refresh">
  <div
    class="van-pull-refresh__track"
    style="transition-duration: 0ms; transform: translate3d(0,75px, 0);"
  >
    <div class="van-pull-refresh__head">
      loosing 75
    </div>
  </div>
</div>
`;

exports[`should render status slots correctly 3`] = `
<div class="van-pull-refresh">
  <div
    class="van-pull-refresh__track"
    style="transition-duration: 300ms; transform: translate3d(0,50px, 0);"
  >
    <div class="van-pull-refresh__head">
      loading 50
    </div>
  </div>
</div>
`;

exports[`should render success slot correctly 1`] = `
<div class="van-pull-refresh">
  <div
    class="van-pull-refresh__track"
    style="transition-duration: 300ms; transform: translate3d(0,50px, 0);"
  >
    <div class="van-pull-refresh__head">
      Custom Success
    </div>
  </div>
</div>
`;

exports[`should render success text correctly 1`] = `
<div class="van-pull-refresh">
  <div
    class="van-pull-refresh__track"
    style="transition-duration: 300ms; transform: translate3d(0,50px, 0);"
  >
    <div class="van-pull-refresh__head">
      <div class="van-pull-refresh__text">
        success
      </div>
    </div>
  </div>
</div>
`;

exports[`should render success text correctly 2`] = `
<div class="van-pull-refresh">
  <div
    class="van-pull-refresh__track"
    style="transition-duration: 300ms;"
  >
    <div class="van-pull-refresh__head">
    </div>
  </div>
</div>
`;
